[tool.poetry]
name = "sakura"
version = "0.1.0"
description = ""
authors = ["Scott Olesen <swo@alum.mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpyro = "^0.13.2"
polars = "^0.20.5"
numpy = "^1.26.3"
altair = "^5.2.0"
jax = "^0.4.23"
pyarrow = "^14.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
