[project]
name = "sakura"
version = "0.1.0"
description = ""
authors = [{ name = "Scott Olesen", email = "swo@alum.mit.edu" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "numpyro>=0.13.2,<0.14",
    "polars>=0.20.5,<0.21",
    "numpy>=1.26.3,<2",
    "altair>=5.2.0,<6",
    "jax>=0.4.23,<0.5",
    "pyarrow>=14.0.2,<15",
]

[dependency-groups]
dev = ["ipykernel>=6.29.3,<7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
