[project]
name = "sakura"
version = "0.1.0"
description = ""
authors = [{ name = "Scott Olesen", email = "swo@alum.mit.edu" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "numpyro>=0.13.2",
    "polars>=0.20.5",
    "numpy>=1.26.3",
    "altair>=5.2.0",
    "pyarrow>=14.0.2",
]

[dependency-groups]
dev = ["ipykernel>=6.29.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
